Enhance SEO and update contact form action
Updated meta tags for better SEO and changed form action URL.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Phayo Meluleki | Web Design & Social Media Management</title>
-  <meta name="description" content="Professional web design and social media management to help businesses grow from 5 to 7 figures with powerful online systems." />  <!-- Google Font -->  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">  <!-- Icons -->  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />  <style>
+  <meta name="description" content="Professional web design and social media management helping businesses grow online, build strong brands, and convert visitors into clients worldwide." />
+  <meta name="keywords" content="Web Designer, Website Design, Social Media Management, Digital Marketing, Business Website, Online Branding, Phayo Meluleki" />
+  <meta name="author" content="Phayo Meluleki" />  <!-- Open Graph for Facebook -->  <meta property="og:title" content="Phayo Meluleki | Web Design & Social Media Management" />
+  <meta property="og:description" content="Helping businesses grow from 5 to 7 figures with professional websites and social media management." />
+  <meta property="og:type" content="website" />  <!-- Twitter Card -->  <meta name="twitter:card" content="summary_large_image" />  <!-- Google Font -->  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">  <!-- Icons -->  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />  <style>
     :root {
       --blue: #0a4cff;
       --dark-blue: #0a2a66;
@@ -327,7 +331,7 @@
   <p>
     Ready to position your business professionally and grow sustainably?
     Get in touch today and let’s create a digital presence that works for you.
-  </p>  <form class="contact-form" action=https://formspree.io/f/xpwvvvdv method="POST">
+  </p>  <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
     <div style="display:grid; gap:15px; max-width:500px; margin-top:30px;">
       <input type="text" name="name" placeholder="Your Name" required style="padding:14px; border-radius:10px; border:none;">
       <input type="email" name="email" placeholder="Your Email" required style="padding:14px; border-radius:10px; border:none;">
