Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en">
-<head>
+<head><meta name="google-site-verification" content="BQbemActhoW_aE7qyKxCS81ZByw1yv3QceigHTvH4SI" />
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"<meta name="google-site-verification" content="BQbemActhoW_aE7qyKxCS81ZByw1yv3QceigHTvH4SI" /> />
   <title>Phayo Meluleki | Web Design & Social Media Management</title>
   <meta name="description" content="Professional web design and social media management helping businesses grow online, build strong brands, and convert visitors into clients worldwide." />
   <meta name="keywords" content="Web Designer, Website Design, Social Media Management, Digital Marketing, Business Website, Online Branding, Phayo Meluleki" />
