Integrate Google Tag Manager in index.html
Added Google Tag Manager script for tracking.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html><html lang="en">
-<head><meta name="google-site-verification" content="BQbemActhoW_aE7qyKxCS81ZByw1yv3QceigHTvH4SI" />
+<head><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTT8S2MMCD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZTT8S2MMCD');
+</script><meta name="google-site-verification" content="BQbemActhoW_aE7qyKxCS81ZByw1yv3QceigHTvH4SI" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"<meta name="google-site-verification" content="BQbemActhoW_aE7qyKxCS81ZByw1yv3QceigHTvH4SI" /> />
   <title>Phayo Meluleki | Web Design & Social Media Management</title>
