Fix Formspree POST method

--- a/index.html
+++ b/index.html
@@ -339,13 +339,16 @@
   <p>
     Ready to position your business professionally and grow sustainably?
     Get in touch today and let’s create a digital presence that works for you.
-  </p>  <form class="contact-form" action=https://formspree.io/f/xwvebgnr="POST">
-    <div style="display:grid; gap:15px; max-width:500px; margin-top:30px;">
-      <input type="text" name="name" placeholder="Your Name" required style="padding:14px; border-radius:10px; border:none;">
-      <input type="email" name="email" placeholder="Your Email" required style="padding:14px; border-radius:10px; border:none;">
-      <textarea name="message" rows="5" placeholder="Tell me about your project" required style="padding:14px; border-radius:10px; border:none;"></textarea>
-      <button type="submit" style="padding:14px; border-radius:50px; border:none; background:white; color:#0a4cff; font-weight:600; cursor:pointer;">Send Message</button>
-    </div>
+  </p>  <form class="contact-<form action="https://formspree.io/f/xwvebgnr" method="POST">
+
+  <input type="text" name="name" placeholder="Your Name" required>
+
+  <input type="email" name="email" placeholder="Your Email" required>
+
+  <textarea name="message" placeholder="Your Message" required></textarea>
+
+  <button type="submit">Send Message</button>
+
   </form>  <div class="contact-info">
     <a href="https://wa.me/26876262057" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp: 7626 2057</a>
     <a href="https://www.facebook.com/share/17sxHinGV5/" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook: Phayo Meluleki</a><div class="socials">
