--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en">
-<head><!-- Google tag (gtag.js) -->
+<head><!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTT8S2MMCD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
