Refactor contact form structure and styling

--- a/index.html
+++ b/index.html
@@ -339,17 +339,28 @@
   <p>
     Ready to position your business professionally and grow sustainably?
     Get in touch today and let’s create a digital presence that works for you.
-  </p>  <form class="contact-<form action="https://formspree.io/f/xwvebgnr" method="POST">
+ 
+  <form 
+    action="https://formspree.io/f/xwvebgnr" 
+    method="POST" class="contact-form">
 
-  <input type="text" name="name" placeholder="Your Name" required>
+  <div class="form-group">
+    <input type="text" name="name" placeholder="Your Name" required>
+  </div>
 
-  <input type="email" name="email" placeholder="Your Email" required>
+  <div class="form-group">
+    <input type="email" name="email" placeholder="Your Email" required>
+  </div>
 
-  <textarea name="message" placeholder="Your Message" required></textarea>
+  <div class="form-group">
+    <textarea name="message" placeholder="Your Message" required></textarea>
+  </div>
 
-  <button type="submit">Send Message</button>
+  <button type="submit" class="btn">Send 
+    Message</button>
 
-  </form>  <div class="contact-info">
+  </form>
+  <div class="contact-info">
     <a href="https://wa.me/26876262057" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp: 7626 2057</a>
     <a href="https://www.facebook.com/share/17sxHinGV5/" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook: Phayo Meluleki</a><div class="socials">
   <a href="https://wa.me/26876262057" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
