Add hidden redirect input to contact form
Added a hidden input for redirecting after form submission.

--- a/index.html
+++ b/index.html
@@ -357,8 +357,10 @@
   </div>
 
   <button type="submit" class="btn">Send 
-    Message</button>
-
+    Message</button
+<input type="hidden" name="_redirect" 
+  value=https://phayomeluleki-netizen.github.io/phayo-site
+  /thank-you.html">
   </form>
   <div class="contact-info">
     <a href="https://wa.me/26876262057" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp: 7626 2057</a>
