Fix HTML structure and add menu toggle script

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
       scroll-behavior: smooth;
     }
 
-    body {<header class="top-header">
+    <script>
+  function toggleMenu() {
+    const menu = document.getElementById("main-menu");
+    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+  }
+</script>body {<header class="top-header">
   <div class="logo">Phayo Meluleki</div>
 
   <div class="menu-toggle" onclick="toggleMenu()">
