Improve toggleMenu function formatting
Refactor toggleMenu function for better readability.

--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
       padding: 0;
       box-sizing: border-box;
       scroll-behavior: smooth;
-    }
-
-    <script>
+  <script>
   function toggleMenu() {
-    const menu = document.getElementById("main-menu");
-    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    const menu = 
+    document.getElementById("main-menu");
+    menu.style.display = menu.style.display 
+    === "flex" ? "none" : "flex";
   }
-</script>body {<header class="top-header">
+</script>
+    body {
+      <header class="top-header">
   <div class="logo">Phayo Meluleki</div>
 
   <div class="menu-toggle" onclick="toggleMenu()">
