--- a/index.html
+++ b/index.html
@@ -401,22 +401,4 @@
       With the right strategy, many businesses see improved visibility and leads within weeks.
     </p>
   </div>
-</section>.site-footer {
-  background: #0a3d62;
-  color: white;
-  text-align: center;
-  padding: 30px 15px;
-  margin-top: 60px;
-}
-
-.footer-socials a {
-  color: #ffffff;
-  margin: 0 10px;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.footer-socials a:hover {
-  text-decoration: underline;
-}</body>
-</html>
+</section>.
