Remove menu toggle script and header from index.html
Removed menu toggle script and header elements.

--- a/index.html
+++ b/index.html
@@ -29,30 +29,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      scroll-behavior: smooth;
-  <script>
-  function toggleMenu() {
-    const menu = 
-    document.getElementById("main-menu");
-    menu.style.display = menu.style.display 
-    === "flex" ? "none" : "flex";
-  }
-</script>
-    body {
-      <header class="top-header">
-  <div class="logo">Phayo Meluleki</div>
-
-  <div class="menu-toggle" onclick="toggleMenu()">
-    ☰
-  </div>
-
-  <nav id="main-menu">
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
+      scroll-behavior: smooth 
       font-family: 'Poppins', sans-serif;
       background: var(--light-grey);
       color: var(--black);
