Fix duplicate head tags and restore structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><html lang="en">
-<head><!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
+<!DOCTYPE html><html lang="en">head
+headerheaderheader<head><!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTT8S2MMCD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -36,7 +36,7 @@
     }
 
     /* ================= TOP NAV ================= */
-    header {
+     {
       position: fixed;
       top: 0;
       right: 0;
@@ -276,8 +276,8 @@
         display: none;
       }
     }
-  </style></head>
-<body><header>
+  </style></>
+<body><>
   <nav class="top-nav">
     <div class="logo">Phayo Meluleki</div>
     <ul>
@@ -287,7 +287,7 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-</header><div class="side-nav">
+</><div class="side-nav">
   <h4>Services</h4>
   <a href="#services">Web Design</a>
   <a href="#services">Social Media Management</a>
