Fix HTML structure and remove duplicates
Corrected HTML structure and removed duplicate header tags.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><html lang="en">head
-headerheaderheader<head><!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
+<!DOCTYPE html><html lang="en"<head><!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTT8S2MMCD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
