--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html lang="en"<head><!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="en"
+  <head
+  <!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTT8S2MMCD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -22,6 +25,13 @@
       --light-grey: #f5f7fb;
       --black: #0f172a;
       --white: #ffffff;
+      <style>
+  body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #0b2a4a;
+    color: #fff;
+  }
+</style>
     }
 
     * {
