--- a/index.html
+++ b/index.html
@@ -1,4 +1,273 @@
-<!DOCTYPE html>
+<!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Phayo Meluleki | Premium Web Design & Social Media Management</title>  <!-- SEO -->  <meta name="description" content="Premium web design and social media management helping businesses build trust, visibility, and sustainable online brands." />  <!-- Google Fonts -->  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">  <!-- Icons -->  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">  <style>
+    :root {
+      --primary: #0b3c5d;
+      --secondary: #6c757d;
+      --light: #f4f6f8;
+      --dark: #0f172a;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      color: var(--dark);
+      background: #ffffff;
+      line-height: 1.6;
+    }
+
+    a { text-decoration: none; color: inherit; }
+
+    /* Navigation */
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(255,255,255,0.95);
+      border-bottom: 1px solid #e5e7eb;
+      z-index: 1000;
+    }
+
+    .nav {
+      max-width: 1200px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 20px;
+    }
+
+    .logo {
+      font-weight: 700;
+      color: var(--primary);
+      font-size: 1.2rem;
+    }
+
+    .nav ul {
+      display: flex;
+      gap: 25px;
+      list-style: none;
+    }
+
+    .nav ul li a {
+      font-weight: 500;
+      color: var(--secondary);
+    }
+
+    .nav ul li a:hover {
+      color: var(--primary);
+    }
+
+    /* Hero */
+    .hero {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      background: linear-gradient(135deg, #0b3c5d, #0f172a);
+      color: #ffffff;
+      padding-top: 80px;
+    }
+
+    .hero-inner {
+      max-width: 1200px;
+      margin: auto;
+      padding: 40px 20px;
+      display: grid;
+      grid-template-columns: 1.2fr 1fr;
+      gap: 40px;
+    }
+
+    .hero h1 {
+      font-size: 2.8rem;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 1.1rem;
+      color: #e5e7eb;
+      margin-bottom: 30px;
+    }
+
+    .cta {
+      display: inline-block;
+      background: #ffffff;
+      color: var(--primary);
+      padding: 14px 30px;
+      border-radius: 50px;
+      font-weight: 600;
+    }
+
+    .cta:hover { opacity: 0.9; }
+
+    /* Trust */
+    .trust {
+      background: var(--light);
+      padding: 60px 20px;
+    }
+
+    .trust-grid {
+      max-width: 1200px;
+      margin: auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+      text-align: center;
+    }
+
+    .trust-box {
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+    }
+
+    .trust-box i {
+      font-size: 28px;
+      color: var(--primary);
+      margin-bottom: 15px;
+    }
+
+    /* Services */
+    .services {
+      padding: 80px 20px;
+    }
+
+    .section-title {
+      text-align: center;
+      max-width: 700px;
+      margin: 0 auto 60px;
+    }
+
+    .section-title h2 {
+      font-size: 2rem;
+      margin-bottom: 15px;
+    }
+
+    .services-grid {
+      max-width: 1200px;
+      margin: auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+    }
+
+    .service {
+      border: 1px solid #e5e7eb;
+      padding: 35px;
+      border-radius: 18px;
+    }
+
+    .service h3 {
+      margin-bottom: 15px;
+      color: var(--primary);
+    }
+
+    /* Contact */
+    .contact {
+      background: var(--primary);
+      color: #ffffff;
+      padding: 80px 20px;
+    }
+
+    .contact-inner {
+      max-width: 900px;
+      margin: auto;
+      display: grid;
+      gap: 40px;
+      text-align: center;
+    }
+
+    form input, form textarea {
+      width: 100%;
+      padding: 15px;
+      border-radius: 10px;
+      border: none;
+      margin-bottom: 15px;
+      font-family: inherit;
+    }
+
+    form button {
+      padding: 15px;
+      background: #ffffff;
+      color: var(--primary);
+      border: none;
+      border-radius: 50px;
+      font-weight: 600;
+      cursor: pointer;
+    }
+
+    /* Footer */
+    footer {
+      background: #020617;
+      color: #94a3b8;
+      text-align: center;
+      padding: 30px 20px;
+    }
+
+    @media (max-width: 900px) {
+      .hero-inner { grid-template-columns: 1fr; }
+    }
+  </style></head><body><header>
+  <div class="nav">
+    <div class="logo">Phayo Meluleki</div>
+    <ul>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </div>
+</header><section class="hero">
+  <div class="hero-inner">
+    <div>
+      <h1>Build Trust. Grow Online. Convert Visitors into Clients.</h1>
+      <p>I help businesses transform into powerful online brands using premium websites and strategic social media management.</p>
+      <a href="#contact" class="cta">Start Your Project</a>
+    </div>
+  </div>
+</section><section class="trust">
+  <div class="trust-grid">
+    <div class="trust-box"><i class="fa-solid fa-globe"></i><p>24/7 Online Presence</p></div>
+    <div class="trust-box"><i class="fa-solid fa-shield"></i><p>Professional & Secure</p></div>
+    <div class="trust-box"><i class="fa-solid fa-chart-line"></i><p>Growth Focused</p></div>
+    <div class="trust-box"><i class="fa-solid fa-users"></i><p>Client-Centered Approach</p></div>
+  </div>
+</section><section class="services" id="services">
+  <div class="section-title">
+    <h2>Premium Digital Services</h2>
+    <p>Modern businesses need strong digital tools to stay competitive in today’s technology-driven world.</p>
+  </div>  <div class="services-grid">
+    <div class="service">
+      <h3>Web Design</h3>
+      <p>High-converting, responsive websites that build trust and operate as your digital business tool 24/7.</p>
+    </div>
+    <div class="service">
+      <h3>Social Media Management</h3>
+      <p>Strategic content and brand positioning that increases visibility, engagement, and customer trust.</p>
+    </div>
+  </div>
+</section><section class="contact" id="contact">
+  <div class="contact-inner">
+    <h2>Let’s Work Together</h2>
+    <p>Tell me about your business and let’s build a strong online presence.</p><form action="https://formspree.io/f/yourFormID" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+  <button type="submit">Send Message</button>
+</form>
+
+  </div>
+</section><footer>
+  <p>© 2025 Phayo Meluleki · Web Design & Social Media Management</p>
+</footer></body>
+</html><!DOCTYPE html>
 <html lang="en"
   <head
   <!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
