--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 </section><section class="contact" id="contact">
   <div class="contact-inner">
     <h2>Let’s Work Together</h2>
-    <p>Tell me about your business and let’s build a strong online presence.</p><form action="https://formspree.io/f/yourFormID" method="POST">
+    <p>Tell me about your business and let’s build a strong online presence.</p><form action="https://formspree.io/f/xwvebgnr"  method="POST">
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
   <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
@@ -267,393 +267,4 @@
 </section><footer>
   <p>© 2025 Phayo Meluleki · Web Design & Social Media Management</p>
 </footer></body>
-</html><!DOCTYPE html>
-<html lang="en"
-  <head
-  <!-- Google tag (gtag.js) --><link rel="stylesheet" href="style.css">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTT8S2MMCD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZTT8S2MMCD');
-</script><meta name="google-site-verification" content="BQbemActhoW_aE7qyKxCS81ZByw1yv3QceigHTvH4SI" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"<meta name="google-site-verification" content="BQbemActhoW_aE7qyKxCS81ZByw1yv3QceigHTvH4SI" /> />
-  <title>Phayo Meluleki | Web Design & Social Media Management</title>
-  <meta name="description" content="Professional web design and social media management helping businesses grow online, build strong brands, and convert visitors into clients worldwide." />
-  <meta name="keywords" content="Web Designer, Website Design, Social Media Management, Digital Marketing, Business Website, Online Branding, Phayo Meluleki" />
-  <meta name="author" content="Phayo Meluleki" />  <!-- Open Graph for Facebook -->  <meta property="og:title" content="Phayo Meluleki | Web Design & Social Media Management" />
-  <meta property="og:description" content="Helping businesses grow from 5 to 7 figures with professional websites and social media management." />
-  <meta property="og:type" content="website" />  <!-- Twitter Card -->  <meta name="twitter:card" content="summary_large_image" />  <!-- Google Font -->  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">  <!-- Icons -->  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />  <style>
-    :root {
-      --blue: #0a4cff;
-      --dark-blue: #0a2a66;
-      --grey: #6b7280;
-      --light-grey: #f5f7fb;
-      --black: #0f172a;
-      --white: #ffffff;
-      <style>
-  body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #0b2a4a;
-    color: #fff;
-  }
-</style>
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth 
-      font-family: 'Poppins', sans-serif;
-      background: var(--light-grey);
-      color: var(--black);
-    }
-
-    /* ================= TOP NAV ================= */
-     {
-      position: fixed;
-      top: 0;
-      right: 0;
-      width: 100%;
-      background: rgba(255,255,255,0.95);
-      backdrop-filter: blur(10px);
-      z-index: 1000;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
-    }
-
-    .top-nav {
-      max-width: 1200px;
-      margin: auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 18px 24px;
-    }
-
-    .logo {
-      font-weight: 700;
-      font-size: 20px;
-      color: var(--blue);
-    }
-
-    .top-nav ul {
-      list-style: none;
-      display: flex;
-      gap: 30px;
-    }
-
-    .top-nav ul li a {
-      text-decoration: none;
-      color: var(--black);
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    .top-nav ul li a:hover {
-      color: var(--blue);
-    }
-
-    /* ================= LEFT SERVICE NAV ================= */
-    .side-nav {
-      position: fixed;
-      top: 120px;
-      left: 20px;
-      background: var(--white);
-      padding: 20px;
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-      z-index: 900;
-    }
-
-    .side-nav h4 {
-      margin-bottom: 12px;
-      color: var(--dark-blue);
-      font-size: 16px;
-    }
-
-    .side-nav a {
-      display: block;
-      margin-bottom: 10px;
-      text-decoration: none;
-      color: var(--grey);
-      font-size: 14px;
-      transition: all 0.3s;
-    }
-
-    .side-nav a:hover {
-      color: var(--blue);
-      transform: translateX(4px);
-    }
-
-    /* ================= SECTIONS ================= */
-    section {
-      max-width: 1200px;
-      margin: auto;
-      padding: 120px 24px 80px;
-    }
-
-    /* ================= HERO / ABOUT ================= */
-    #about {
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 50px;
-      align-items: center;
-    }
-
-    .hero h1 {
-      font-size: 42px;
-      line-height: 1.2;
-      margin-bottom: 20px;
-    }
-
-    .hero h1 span {
-      color: var(--blue);
-    }
-
-    .hero p {
-      color: var(--grey);
-      margin-bottom: 30px;
-      font-size: 16px;
-    }
-
-    .cta {
-      display: inline-block;
-      padding: 14px 28px;
-      background: var(--blue);
-      color: var(--white);
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: 500;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .cta:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(10,76,255,0.35);
-    }
-
-    /* ================= SERVICES ================= */
-    #services h2,
-    #portfolio h2,
-    #contact h2 {
-      font-size: 32px;
-      margin-bottom: 20px;
-    }
-
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
-
-    .service-card {
-      background: var(--white);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
-      transition: transform 0.3s;
-    }
-
-    .service-card:hover {
-      transform: translateY(-6px);
-    }
-
-    .service-card i {
-      font-size: 30px;
-      color: var(--blue);
-      margin-bottom: 15px;
-    }
-
-    .service-card h3 {
-      margin-bottom: 10px;
-    }
-
-    .service-card p {
-      font-size: 14px;
-      color: var(--grey);
-    }
-
-    /* ================= PORTFOLIO ================= */
-    .portfolio-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 25px;
-      margin-top: 40px;
-    }
-
-    .portfolio-item {
-      background: linear-gradient(135deg, var(--blue), var(--dark-blue));
-      height: 180px;
-      border-radius: 18px;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 500;
-    }
-
-    /* ================= CONTACT ================= */
-    #contact {
-      background: linear-gradient(135deg, #0a4cff, #0a2a66);
-      color: white;
-      border-radius: 30px;
-      padding: 80px 40px;
-      animation: pulse 3s infinite;
-    }
-
-    @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(255,255,255,0.3); }
-      70% { box-shadow: 0 0 0 20px rgba(255,255,255,0); }
-      100% { box-shadow: 0 0 0 0 rgba(255,255,255,0); }
-    }
-
-    .contact-info {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-top: 30px;
-    }
-
-    .contact-info a {
-      color: white;
-      text-decoration: none;
-      font-size: 16px;
-    }
-
-    .socials a {
-      margin-right: 15px;
-      font-size: 22px;
-      color: white;
-    }
-
-    /* ================= FAQ ================= */
-    .faq {
-      margin-top: 60px;
-    }
-
-    .faq h3 {
-      margin-bottom: 10px;
-    }
-
-    .faq p {
-      color: var(--grey);
-      font-size: 14px;
-    }
-
-    /* ================= RESPONSIVE ================= */
-    @media (max-width: 900px) {
-      #about {
-        grid-template-columns: 1fr;
-      }
-      .side-nav {
-        display: none;
-      }
-    }
-  </style></>
-<body><>
-  <nav class="top-nav">
-    <div class="logo">Phayo Meluleki</div>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-</><div class="side-nav">
-  <h4>Services</h4>
-  <a href="#services">Web Design</a>
-  <a href="#services">Social Media Management</a>
-</div><section id="about">
-  <div class="hero">
-    <h1>I Build <span>Professional Digital Systems</span><br>That Turn Visitors Into Clients</h1>
-    <p>
-      I am Phayo Meluleki, a website designer and social media manager on a mission to help businesses
-      show up online with confidence. My goal is to transform brands from 5 figures to 6 and 7 figures
-      by building powerful digital tools that work 24/7 and attract customers worldwide.
-    </p>
-    <a href="#contact" class="cta">Work With Me</a>
-  </div>
-</section><section id="services">
-  <h2>Services That Modern Businesses Demand</h2>
-  <p style="color:var(--grey); max-width:700px;">
-    We live in a technology-driven world. Businesses that adopt digital tools grow faster, build trust,
-    and remain competitive. My services are designed to position your brand professionally online.
-  </p>  <div class="services-grid">
-    <div class="service-card">
-      <i class="fa-solid fa-laptop-code"></i>
-      <h3>Web Design</h3>
-      <p>
-        A professional website is your strongest online asset. It builds credibility, works 24/7,
-        and converts visitors into paying clients while expanding your business globally.
-      </p>
-    </div><div class="service-card">
-  <i class="fa-solid fa-chart-line"></i>
-  <h3>Social Media Management</h3>
-  <p>
-    Social media connects you directly with your audience. I help you grow visibility,
-    engagement, and trust while turning attention into real business results.
-  </p>
-</div>
-
-  </div>
-</section><section id="portfolio">
-  <h2>Portfolio</h2>
-  <p style="color:var(--grey);">Selected projects and brand concepts (more coming soon).</p>  <div class="portfolio-grid">
-    <div class="portfolio-item">Business Website</div>
-    <div class="portfolio-item">Brand Landing Page</div>
-    <div class="portfolio-item">Social Media Campaign</div>
-  </div>
-</section><section id="contact">
-  <h2>Let’s Build Your Online Growth System</h2>
-  <p>
-    Ready to position your business professionally and grow sustainably?
-    Get in touch today and let’s create a digital presence that works for you.
- 
-  <form 
-    action="https://formspree.io/f/xwvebgnr" 
-    method="POST" class="contact-form">
-
-  <div class="form-group">
-    <input type="text" name="name" placeholder="Your Name" required>
-  </div>
-
-  <div class="form-group">
-    <input type="email" name="email" placeholder="Your Email" required>
-  </div>
-
-  <div class="form-group">
-    <textarea name="message" placeholder="Your Message" required></textarea>
-  </div>
-
-  <button type="submit" class="btn">Send 
-    Message</button
-<input type="hidden" name="_redirect" 
-  value=https://phayomeluleki-netizen.github.io/phayo-site
-  /thank-you.html">
-  </form>
-  <div class="contact-info">
-    <a href="https://wa.me/26876262057" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp: 7626 2057</a>
-    <a href="https://www.facebook.com/share/17sxHinGV5/" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook: Phayo Meluleki</a><div class="socials">
-  <a href="https://wa.me/26876262057" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-  <a href="https://www.facebook.com/share/17sxHinGV5/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-</div>
-
-  </div>  <div class="faq">
-    <h3>Frequently Asked Questions</h3>
-    <p><strong>Do I really need a website?</strong><br>
-      Yes. A website builds trust, credibility, and allows customers to find you anytime, anywhere.
-    </p><br>
-    <p><strong>Can social media alone grow my business?</strong><br>
-      Social media works best when combined with a professional website that converts attention into sales.
-    </p><br>
-    <p><strong>How soon can I see results?</strong><br>
-      With the right strategy, many businesses see improved visibility and leads within weeks.
-    </p>
-  </div>
-</section>.
+</html>
