--- a/index.html
+++ b/index.html
@@ -289,6 +289,22 @@
       <p>Strategic content and brand positioning that increases visibility, engagement, and customer trust.</p>
     </div>
   </div>
+</section><section class="trust reveal" id="testimonials">
+  <div class="section-title">
+    <h2>What Clients Say</h2>
+    <p>Real feedback from businesses and organizations I’ve worked with.</p>
+  </div>  <div class="trust-grid">
+    <div class="trust-box">
+      <img src="testimonial-whatsapp.jpg" alt="WhatsApp client feedback" style="width:100%; border-radius:12px; margin-bottom:15px;">
+      <p><strong>Small Business Owner</strong></p>
+      <p>“The website looks professional and my customers trust my business more. I’m very satisfied with the work.”</p>
+    </div><div class="trust-box">
+  <img src="testimonial-email.jpg" alt="NGO email feedback" style="width:100%; border-radius:12px; margin-bottom:15px;">
+  <p><strong>NGO Campaign Team</strong></p>
+  <p>“Thank you for improving our educational campaign website. Your contribution made a meaningful impact.”</p>
+</div>
+
+  </div>
 </section><section class="contact reveal" id="contact">
   <div class="contact-inner">
     <h2>Let’s Work Together</h2>
