--- a/index.html
+++ b/index.html
@@ -27,14 +27,25 @@
 
     a { text-decoration: none; color: inherit; }
 
+    html {
+      scroll-behavior: smooth;
+    }
+
     /* Navigation */
     header {
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(255,255,255,0.95);
+      background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(10px);
       border-bottom: 1px solid #e5e7eb;
       z-index: 1000;
+      transition: box-shadow 0.3s ease, background 0.3s ease;
+    }
+
+    header.scrolled {
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      background: rgba(255,255,255,0.95);
     }
 
     .nav {
@@ -257,6 +268,7 @@
     <div class="logo">Phayo Meluleki</div>
     <ul>
       <li><a href="#services">Services</a></li>
+      <li><a href="#testimonials">Testimonials</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
@@ -342,5 +354,14 @@
 
   window.addEventListener('scroll', revealOnScroll);
   revealOnScroll();
+  // Sticky header shadow on scroll
+  const header = document.querySelector('header');
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 20) {
+      header.classList.add('scrolled');
+    } else {
+      header.classList.remove('scrolled');
+    }
+  });
 </script></body>
-</html>
+  </html>
