--- a/index.html
+++ b/index.html
@@ -363,5 +363,14 @@
       header.classList.remove('scrolled');
     }
   });
-</script></body>
+</script><!-- WhatsApp Floating Button -->
+<a href="https://wa.me/26876262057"
+   class="whatsapp-float"
+   target="_blank"
+   aria-label="Chat on WhatsApp">
+  <svg width="26" height="26" viewBox="0 0 32 32" fill="white"
+       xmlns="http://www.w3.org/2000/svg">
+    <path d="M19.11 17.36c-.28-.14-1.65-.81-1.9-.9-.25-.09-.43-.14-.61.14-.18.28-.7.9-.86 1.08-.16.18-.32.21-.6.07-.28-.14-1.18-.43-2.24-1.38-.83-.74-1.38-1.65-1.54-1.93-.16-.28-.02-.43.12-.57.12-.12.28-.32.42-.48.14-.16.18-.28.28-.46.09-.18.05-.35-.02-.49-.07-.14-.61-1.47-.83-2.02-.22-.53-.44-.46-.61-.47h-.52c-.18 0-.49.07-.75.35-.26.28-.98.96-.98 2.34s1 2.71 1.14 2.9c.14.18 1.97 3.01 4.77 4.22.67.29 1.2.46 1.61.59.68.22 1.29.19 1.78.12.54-.08 1.65-.67 1.88-1.32.23-.65.23-1.21.16-1.32-.07-.11-.25-.18-.53-.32z"/>
+  </svg>
+</a></body>
   </html>
