--- a/index.html
+++ b/index.html
@@ -263,7 +263,46 @@
       transform: translateY(-5px);
       box-shadow: 0 15px 35px rgba(0,0,0,0.08);
     }
-  </style></head><body><header>
+  /* WhatsApp Floating Button */
+.whatsapp-float {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  width: 60px;
+  height: 60px;
+  background: linear-gradient(135deg, #0b3c5d, #0f172a);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 12px 30px rgba(11, 60, 93, 0.45);
+  z-index: 9999;
+  animation: whatsappPulse 2.5s infinite;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.08);
+  box-shadow: 0 18px 40px rgba(11, 60, 93, 0.6);
+}
+
+.whatsapp-float i {
+  color: #ffffff;
+  font-size: 28px;
+}
+
+/* Professional attention animation */
+@keyframes whatsappPulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(11, 60, 93, 0.6);
+  }
+  70% {
+    box-shadow: 0 0 0 16px rgba(11, 60, 93, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(11, 60, 93, 0);
+  }
+    }</style></head><body><header>
   <div class="nav">
     <div class="logo">Phayo Meluleki</div>
     <ul>
@@ -363,5 +402,11 @@
       header.classList.remove('scrolled');
     }
   });
-</script></body>
+</script><!-- Floating WhatsApp Button -->
+<a href="https://wa.me/26876262057"
+   class="whatsapp-float"
+   target="_blank"
+   aria-label="Chat on WhatsApp">
+  <i class="fa-brands fa-whatsapp"></i>
+</a></body>
   </html>
