--- a/index.html
+++ b/index.html
@@ -301,6 +301,48 @@
   }
   100% {
     box-shadow: 0 0 0 0 rgba(11, 60, 93, 0);
+    /* WhatsApp Tooltip */
+.whatsapp-tooltip {
+  position: absolute;
+  right: 70px;
+  background: #0f172a;
+  color: #ffffff;
+  padding: 8px 14px;
+  border-radius: 8px;
+  font-size: 13px;
+  font-weight: 500;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(5px);
+  transition: all 0.3s ease;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+}
+
+/* Tooltip arrow */
+.whatsapp-tooltip::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -6px;
+  transform: translateY(-50%);
+  border-width: 6px;
+  border-style: solid;
+  border-color: transparent transparent transparent #0f172a;
+}
+
+/* Show tooltip on hover (desktop) */
+.whatsapp-float:hover .whatsapp-tooltip {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Always visible on mobile */
+@media (max-width: 768px) {
+  .whatsapp-tooltip {
+    opacity: 1;
+  }
+}
   }
     }</style></head><body><header>
   <div class="nav">
@@ -407,6 +449,7 @@
    class="whatsapp-float"
    target="_blank"
    aria-label="Chat on WhatsApp">
+  <span class="whatsapp-tooltip">Chat with Phayo</span>
   <i class="fa-brands fa-whatsapp"></i>
 </a></body>
   </html>
