--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
   border-width: 6px;
   border-style: solid;
   border-color: transparent transparent transparent #0f172a;
-  /* Contact Facebook Button */
+  /* Contact Facebook Button – Fixed Contrast */
 .contact-social {
   display: flex;
   justify-content: center;
@@ -341,16 +341,23 @@
   align-items: center;
   gap: 10px;
   padding: 12px 22px;
-  background: rgba(255, 255, 255, 0.12);
-  color: #ffffff;
+  background: #ffffff;              /* solid contrast */
+  color: #0b3c5d;                   /* your primary brand blue */
   border-radius: 50px;
-  font-weight: 500;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  font-weight: 600;
+  border: none;
   transition: all 0.3s ease;
 }
 
 .facebook-contact i {
   font-size: 18px;
+  color: #1877f2;                   /* Facebook brand blue */
+}
+
+.facebook-contact:hover {
+  background: #e5e7eb;
+  transform: translateY(-2px);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
 }
 
 .facebook-contact:hover {
