--- a/index.html
+++ b/index.html
@@ -381,7 +381,16 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
-</header><section class="hero reveal">
+<!-- Google Analytics 4 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTT8S2MMCD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZTT8S2MMCD');
+</script>
+<!-- End Google Analytics 4 --></header><section class="hero reveal">
   <div class="hero-inner">
     <div>
       <h1>Build Trust. Grow Online. Convert Visitors into Clients.</h1>
